force-app/main/default/objects/msmxSheet__MsmxRecordMetadata__c/msmxSheet__MsmxRecordMetadata__c.object-meta.xml
<CustomObject>
    <label>Mashmatrix Record Metadata</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>