force-app/main/default/objects/msmxSheet__MsmxRecordMetadata__c/fields/msmxSheet__Book__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Book__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Book</label>
    <referenceTo>msmxSheet__MsmxBook__c</referenceTo>
    <relationshipLabel>Mashmatrix Record Metaata</relationshipLabel>
    <relationshipName>RecordMetadata</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>