force-app/main/default/objects/msmxSheet__MsmxRecordMetadata__c/fields/msmxSheet__FgColorGreen__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__FgColorGreen__c</fullName>
    <label>Foregroud Color: Green</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>