force-app/main/default/objects/msmxSheet__MsmxRecordMetadata__c/fields/msmxSheet__FgColorRed__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__FgColorRed__c</fullName>
    <label>Foregroud Color: Red</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>