force-app/main/default/objects/msmxSheet__MsmxRecordMetadata__c/fields/msmxSheet__Parent__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Parent__c</fullName>
    <label>Parent Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>